# nonebot-plugin-eitherchoice

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_eitherchoice/: __init__.py  __main__.py  config.py  data_source.py
nonebot_plugin_eitherchoice/res/: template.html.jinja
