[project]
name = "nonebot-plugin-eitherchoice"
version = "0.1.0"
description = "Let AI help you evaluate two things."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.2.0",
    "pydantic>=1.10.4",
    "httpx>=0.24.1",
    "nonebot-plugin-htmlrender>=0.2.1",
    "nonebot-plugin-send-anything-anywhere>=0.2.7",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/owner/nonebot-plugin-example"

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = ["nb-cli>=1.0.5", "black>=23.3.0", "ruff>=0.0.260", "isort>=5.12.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
